[package]
name = "marketpalace-raise-contract"
version = "0.1.0"
authors = ["Thomas Silva <tsilva@figure.com>"]
edition = "2018"

exclude = [
  "tutorial.wasm",
  "checksums.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
provwasm-std = { version = "0.16.0"}
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
provwasm-mocks = { version = "0.16.0" }
cosmwasm-schema = { version = "0.16.2" }
